--- a/ccdate.cabal
+++ b/ccdate.cabal
@@ -71,7 +71,10 @@ executable ccdate
     -- other-extensions:
 
     -- Other library packages from which modules are imported.
-    build-depends:    base ^>=4.17.0.0
+    build-depends:
+        base ^>=4.17.0.0,
+        haskell-say ^>=1.0.0.0,
+        time ^>=1.12.2
 
     -- Directories containing source files.
     hs-source-dirs:   app
